更改编码及目录结构